<resources>
    <string name="app_name" translatable="false">MyHealthAssistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="MySymptoms">My Symptoms</string>
    <string name="AppGreeting">Welcome!</string>
    <string name="Settings">Settings</string>
    <string name="Exit">Exit</string>
    <string name="RecordPain">Record Pain</string>
    <string name="PainNote">We\'re sorry that you\'re having pain.\n\nTake a few moments to record your symptoms.\nTell us where your pain is?</string>
    <string name="PainScaleTitle">Please rate the severity of your pain on the scale of 1 to 10</string>
    <string name="NoPain">No pain</string>
    <string name="VeryMildPain">Very mild pain</string>
    <string name="MildPain">Mild pain</string>
    <string name="MildModeratePain">Mild to Moderate pain</string>
    <string name="ModeratePain">Moderate Pain</string>
    <string name="ModerateSeverePain">Moderate to Severe pain</string>
    <string name="SeverePain">Severe Pain</string>
    <string name="ExtremePain">Extreme pain</string>
    <string name="Pain3">You are sometimes distracted by the pain.</string>
    <string name="Pain4">You are constantly distracted by pain but can perform usual activities.</string>
    <string name="Pain5">The pain is bad enough that you need to interrupt or limit some activities.</string>
    <string name="Pain6">The pain is bad enough that you need to interrupt or limit some activities.\\nHave some rest and follow your condition, contact a physician if you need to.</string>
    <string name="Pain7">The pain is in constant focus. You can not do daily activities.\\nIt would be wise to consult with your physician.</string>
    <string name="Pain8">The pain is awful, you can not do anything.\\nIt would be wise to contact medical staff as soon as possible.</string>
    <string name="Pain9">You feel the pain is unbearable.\\n⚠️ CONTACT A DOCTOR IMMEDIATELY ⚠️</string>
    <string name="Pain10">The pain is the worst you have ever experienced.\\n⚠️ CONTACT YOUR EMERGENCY SERVICE IMMEDIATELY ⚠️</string>
    <string name="Pain0">You are currently experiencing no pain.</string>
    <string name="Pain1">You are having some pain, but it\'s hardly noticeable.</string>
    <string name="Pain2">You are beginning to notice the pain.</string>
    <string name="LogIn">Log in</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Error">Error</string>
    <string name="SignUp">Sign up</string>
    <string name="Repass">Repeat Password</string>
    <string name="Email">Email</string>
    <string name="Language">Select a language</string>
    <string name="NoAccount">Don\'t have an account?</string>
    <string name="Back">← Back</string>
    <string name="LanguageButton">Language</string>
    <string name="LogOut">Log out</string>
    <string name="Accept">Accept</string>
    <string name="SymptomsTitle">Record or review your symptoms</string>
    <string name="Next">Next →</string>
    <string name="Finish">Finish</string>
    <string name="ThankYou">Thank you</string>
    <string name="ThankYouNote">Thank you for registering your symptoms. \\nWe hope you\'ll feel better soon!\\nRemember to check in with your doctor if you don\'t.</string>
    <string name="WelcomeAccount">Create your MyHealthAssistant account!</string>
</resources>