<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LanguagesFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="664dp"
        android:background="@drawable/mm_button"
        android:text="@string/Accept"
        android:textAppearance="@style/Theme.MyHealthAssistant.Label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="664dp"
        android:background="@drawable/mm_button"
        android:text="@string/Back"
        android:textAppearance="@style/Theme.MyHealthAssistant.Label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="266dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/Language"
        android:textAlignment="center"
        android:textAppearance="@style/Theme.MyHealthAssistant.TitleBlack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwLangs"
        android:layout_width="411dp"
        android:layout_height="567dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/card_view_design" />

</androidx.constraintlayout.widget.ConstraintLayout>