<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment" >

    <ImageView
        android:id="@+id/loginbackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg_default"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tw_title"
        android:layout_width="355dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textAppearance="@style/Theme.MyHealthAssistant.LogoTitle2"
        android:textColor="@color/ha_white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="115dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="656dp"
        android:background="@drawable/mm_button"
        android:text="@string/Back"
        android:textAppearance="@style/Theme.MyHealthAssistant.Label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="175dp"
        android:layout_height="138dp"
        android:layout_marginTop="156dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibLanguage"
            android:layout_width="91dp"
            android:layout_height="90dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/eco_friendly"
            android:translationZ="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLanguage"
            android:layout_width="148dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/mm_button"
            android:text="@string/LanguageButton"
            android:textAppearance="@style/Theme.MyHealthAssistant.Label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>