<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout55"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".PainWizardFragment">

    <Button
        android:id="@+id/btnNext"
        android:layout_width="115dp"
        android:layout_height="38dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="676dp"
        android:background="@drawable/mm_button"
        android:text="@string/Next"
        android:textAppearance="@style/Theme.MyHealthAssistant.Label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="115dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="676dp"
        android:background="@drawable/mm_button"
        android:text="@string/Back"
        android:textAppearance="@style/Theme.MyHealthAssistant.Label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pnlFinish"
        android:layout_width="411dp"
        android:layout_height="628dp"
        android:visibility="invisible"
        tools:layout_editor_absoluteY="16dp"
        tools:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/twtitle3"
            android:layout_width="205dp"
            android:layout_height="52dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sarabun_bold"
            android:text="@string/ThankYou"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.MyHealthAssistant.LabelBlack"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/twDescription2"
            android:layout_width="381dp"
            android:layout_height="90dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="436dp"
            android:text="@string/ThankYouNote"
            android:textAppearance="@style/Theme.MyHealthAssistant.LabelBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pnlSelect"
        android:layout_width="406dp"
        android:layout_height="603dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/twTitle3"
            android:layout_width="293dp"
            android:layout_height="47dp"
            android:layout_marginTop="36dp"
            android:text="@string/PainScaleTitle"
            android:textAppearance="@style/Theme.MyHealthAssistant.TitleBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="337dp"
            android:layout_height="40dp"
            android:layout_marginTop="564dp"
            android:background="@drawable/scale"
            android:max="10"
            android:min="0"
            android:progress="0"
            android:thumb="@drawable/tracker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivwIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/s0"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/twtitle2"
            android:layout_width="205dp"
            android:layout_height="52dp"
            android:fontFamily="@font/sarabun_bold"
            android:text="@string/NoPain"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.MyHealthAssistant.LabelBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.461" />

        <TextView
            android:id="@+id/twDescription"
            android:layout_width="381dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:text="@string/Pain0"
            android:textAppearance="@style/Theme.MyHealthAssistant.LabelBlack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.621" />

        <TextView
            android:id="@+id/twtrack"
            android:layout_width="374dp"
            android:layout_height="31dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="540dp"
            android:text="0      1     2      3      4     5      6      7     8      9     10"
            android:textAppearance="@style/Theme.MyHealthAssistant.LabelBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pnlMap"
        android:layout_width="413dp"
        android:layout_height="669dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/PainNote"
            android:textAppearance="@style/Theme.MyHealthAssistant.TitleBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibChest"
            android:layout_width="97dp"
            android:layout_height="90dp"
            android:layout_marginTop="202dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/chest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibHead"
            android:layout_width="61dp"
            android:layout_height="79dp"
            android:layout_marginTop="126dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/head"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibRF"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:layout_marginTop="604dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/right_foot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibLF"
            android:layout_width="32dp"
            android:layout_height="35dp"
            android:layout_marginTop="604dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/left_foot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibLH"
            android:layout_width="41dp"
            android:layout_height="56dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="380dp"
            android:background="@android:color/transparent"
            android:scaleType="fitEnd"
            android:src="@drawable/left_hand"
            app:layout_constraintStart_toStartOf="@+id/ivwMap"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibRH"
            android:layout_width="38dp"
            android:layout_height="56dp"
            android:layout_marginStart="206dp"
            android:layout_marginTop="380dp"
            android:background="@android:color/transparent"
            android:scaleType="fitEnd"
            android:src="@drawable/right_hand"
            app:layout_constraintStart_toStartOf="@+id/ivwMap"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibLA"
            android:layout_width="50dp"
            android:layout_height="172dp"
            android:layout_marginTop="212dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/left_arm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.315"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibLL"
            android:layout_width="45dp"
            android:layout_height="249dp"
            android:layout_marginTop="356dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/left_leg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.431"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibRL"
            android:layout_width="47dp"
            android:layout_height="249dp"
            android:layout_marginTop="356dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/right_leg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibRA"
            android:layout_width="52dp"
            android:layout_height="172dp"
            android:layout_marginTop="212dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/right_arm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.685"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibAbdomen"
            android:layout_width="97dp"
            android:layout_height="116dp"
            android:layout_marginTop="292dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/stomach"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivwMap"
            android:layout_width="274dp"
            android:layout_height="515dp"
            android:layout_marginTop="125dp"
            android:src="@drawable/body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>